Prevent publication status cell cropping in front page

--- a/ui/src/publication/publication-list.scss
+++ b/ui/src/publication/publication-list.scss
@@ -13,6 +13,7 @@
     &__status {
         border-radius: 4px;
         width: 8px;
+        min-width: 8px;
         height: 8px;
         margin-right: 12px;
 
